syntax = "proto3";

package todo;

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
  rpc GetTodo (GetTodoRequest) returns (GetTodoResponse);
  rpc ListTodos (ListTodosRequest) returns (ListTodosResponse);
  rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse);
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message GetTodoRequest {
  int32 id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message DeleteTodoRequest {
  int32 id = 1;
}

message DeleteTodoResponse {}

message Todo {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}
